--- a/src/main/resources/application.properties.dist
+++ b/src/main/resources/application.properties.dist
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/studs
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = Buzuluk2002
 
