add new cors + vue router
add new cors + vue router

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = Buzuluk2002
+#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username = postgres
+#spring.datasource.password = Buzuluk2002
 
-#spring.datasource.url = jdbc:postgresql://pg:5432/studs
-#spring.datasource.username = s284693
-#spring.datasource.password = ryb138
-
+spring.datasource.url = jdbc:postgresql://pg:5432/studs
+spring.datasource.username = s284693
+spring.datasource.password = ryb138
 
 server.port=41143
 
